--- a/ui/CEGUIWidget.ui
+++ b/ui/CEGUIWidget.ui
@@ -94,6 +94,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="lblZoom">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
