Custom resolution setting in a CEGUI viewport

--- a/ui/CEGUIWidget.ui
+++ b/ui/CEGUIWidget.ui
@@ -130,6 +130,9 @@
         <property name="editable">
          <bool>true</bool>
         </property>
+        <property name="insertPolicy">
+         <enum>QComboBox::NoInsert</enum>
+        </property>
         <item>
          <property name="text">
           <string>Project default</string>
