Previews get default size from the widget when possible

--- a/ui/layout/CreateWidgetDockWidget.ui
+++ b/ui/layout/CreateWidgetDockWidget.ui
@@ -24,7 +24,7 @@
     <item>
      <widget class="WidgetTypeTreeWidget" name="tree">
       <property name="toolTip">
-       <string>Drag to the layout to create</string>
+       <string/>
       </property>
       <column>
        <property name="text">
