--- a/ui/imageset/ImagesetEditorDockWidget.ui
+++ b/ui/imageset/ImagesetEditorDockWidget.ui
@@ -22,7 +22,7 @@
   <property name="minimumSize">
    <size>
     <width>337</width>
-    <height>525</height>
+    <height>541</height>
    </size>
   </property>
   <property name="focusPolicy">
@@ -164,6 +164,32 @@
          </property>
         </widget>
        </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="btnHelp">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="toolTip">
+          <string>Show help overlay</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../../data/Resources.qrc">
+           <normaloff>:/icons/actions/help_about.png</normaloff>:/icons/actions/help_about.png</iconset>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
@@ -191,7 +217,16 @@
           <property name="spacing">
            <number>1</number>
           </property>
-          <property name="margin">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
            <number>0</number>
           </property>
           <item>
@@ -210,7 +245,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="../../data/Resources.qrc">
               <normaloff>:/icons/imageset_editing/filter_reset.png</normaloff>:/icons/imageset_editing/filter_reset.png</iconset>
             </property>
             <property name="iconSize">
@@ -413,7 +448,9 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../data/Resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>filterResetButton</sender>
